--- a/public/shop.html
+++ b/public/shop.html
@@ -181,19 +181,32 @@
         /* Плашка "Посмотреть дроп" поверх картинки кейса */
 .case-info-overlay {
     position: absolute;
-    bottom: 0;
+
+    /* 1️⃣ УБИРАЕМ привязку к низу */
+    /* bottom: 0; */ 
+
+    /* 2️⃣ ДОБАВЛЯЕМ привязку к верху. 
+       Значение 85% подобрано так, чтобы плашка начиналась примерно там же, где и раньше.
+       Если она слишком высоко или низко, немного измени это число (например, 84% или 87%). */
+    top: 85%; 
+
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.6); /* Полупрозрачный черный */
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(2px);
     color: var(--primary-color);
     font-size: 9px;
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
-    padding: 6px 0;
+
+    /* 3️⃣ ЗАМЕНЯЕМ общий padding на раздельный.
+       Теперь мы можем увеличивать только нижний отступ. */
+    padding-top: 6px;    /* Верхний отступ оставляем как был */
+    padding-bottom: 15px; /* 👇 УВЕЛИЧИВАЙ ЭТО ЧИСЛО, чтобы линия росла ВНИЗ */
+
     z-index: 5;
-    pointer-events: none; /* Чтоб не мешала клику по родителю */
+    pointer-events: none;
     letter-spacing: 0.5px;
 }
 
