--- a/public/shop.html
+++ b/public/shop.html
@@ -744,8 +744,7 @@
 
         .case-img-wrap {
     padding-top: 80%;
-    /* Убираем градиент, ставим прозрачный фон (будет виден темный цвет самой карточки) */
-    background: transparent; 
+    background: #000000; /* Чистый черный специально для кейсов */
 }
 
         .case-buttons-wrapper {
