--- a/public/admin.html
+++ b/public/admin.html
@@ -114,6 +114,12 @@
                     </div>
                         <span>Розыгрыши</span>
                     </a>
+                  <a href="/admin_cases.html" class="admin-icon-button">
+                        <div class="icon-wrapper" style="color: #ff9800; border-color: rgba(255, 152, 0, 0.3);">
+                            <i class="fa-solid fa-boxes-stacked"></i>
+                        </div>
+                        <span>Кейсы</span>
+                    </a>
                     <a href="/roulette.html" target="_blank" class="admin-icon-button">
                         <div class="icon-wrapper"><i class="fa-solid fa-eye"></i></div>
                         <span>Просмотр рулетки</span>
