--- a/public/admin_cases.html
+++ b/public/admin_cases.html
@@ -30,7 +30,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             margin: 0; padding: 20px; padding-bottom: 100px;
             -webkit-tap-highlight-color: transparent;
-            user-select: none; /* Глобально запрещаем выделение, но разрешим в инпутах */
+            /*user-select: none; /* Глобально запрещаем выделение, но разрешим в инпутах */
         }
 
         /* HEADER */
