--- a/public/shop.html
+++ b/public/shop.html
@@ -3084,7 +3084,7 @@ function launchRoulette(items, winner, extraMessages, lacky, rawCaseName) {
         if (remaining === 1) word = "кейс";
         else if (remaining >= 2 && remaining <= 4) word = "кейса";
         
-        progressTextEl.innerHTML = `Осталось <span style="color: #fff; font-weight: 800;">${remaining} ${word}</span> до гарантированнонго окупа кейса`;
+        progressTextEl.innerHTML = `Осталось <span style="color: #fff; font-weight: 800;">${remaining} ${word}</span> до гарантированнонго окупа с кейса`;
     }
     // ------------------------------------------
 
