--- a/public/admin.html
+++ b/public/admin.html
@@ -71,6 +71,12 @@
                         </div>
                         <span>Секретка меню</span>
                     </a>
+                  <a href="/admin_steam.html" class="admin-icon-button">
+                        <div class="icon-wrapper" style="color: #00adee;">
+                            <i class="fa-brands fa-steam"></i>
+                        </div>
+                        <span>Steam автоматический вывод</span>
+                    </a>
                     <div class="admin-icon-button" data-view="view-admin-promocodes">
                         <div class="icon-wrapper"><i class="fa-solid fa-ticket"></i></div>
                         <span>Промокоды</span>
