--- a/public/admin_steam.html
+++ b/public/admin_steam.html
@@ -193,27 +193,25 @@
             const pass = document.getElementById('inp-pass').value.trim();
             const secret = document.getElementById('inp-secret').value.trim();
 
-            // Базовые проверки, чтобы не слать пустые запросы
             if (!login || !pass) {
-                tg.showAlert("Бро, введи логин и пароль!");
-                return;
-            }
-            if (!secret) {
-                tg.showAlert("Для автоматики обязательно нужен Shared Secret (maFile)!");
+                tg.showAlert("Введи логин и пароль!");
                 return;
             }
 
-            // Окно подтверждения (как ты и просил)
+            // Убрали жесткий блок! Теперь пускает без секрета.
+            if (!secret) {
+                // Просто предупреждаем, но даем нажать "ОК"
+                tg.showAlert("⚠️ Без Shared Secret сервер Vercel может зависнуть, ожидая код Steam Guard!");
+            }
+
             tg.showConfirm(`Попытаться авторизовать аккаунт ${login}?`, async (ok) => {
                 if (ok) {
-                    // Блокируем кнопку и показываем анимацию загрузки
                     const btn = document.querySelector('#auth-form .btn-save');
                     const originalText = btn.innerHTML;
                     btn.innerHTML = '<i class="fa-solid fa-circle-notch fa-spin"></i> АВТОРИЗАЦИЯ...';
                     btn.disabled = true;
 
                     try {
-                        // Отправляем реальный запрос на твой FastAPI
                         const res = await fetch('/api/v1/admin/steam/auth', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
@@ -222,7 +220,7 @@
                                 bot_id: parseInt(botId),
                                 login: login,
                                 password: pass,
-                                shared_secret: secret
+                                shared_secret: secret || "" // Передаем пустую строку
                             })
                         });
 
@@ -231,16 +229,15 @@
                         if (res.ok) {
                             tg.HapticFeedback.notificationOccurred('success');
                             tg.showAlert("✅ " + data.message);
-                            closeModal(); // Закрываем шторку
-                            loadBots();   // Обновляем список ботов, чтобы загорелся 🟢 статус
+                            closeModal(); 
+                            loadBots();   
                         } else {
                             tg.HapticFeedback.notificationOccurred('error');
-                            tg.showAlert("❌ Ошибка: " + (data.detail || "Неверные данные"));
+                            tg.showAlert("❌ Ошибка: " + (data.detail || "Неверные данные / Нужен Steam Guard"));
                         }
                     } catch(e) {
-                        tg.showAlert("Сбой сервера при авторизации. Попробуй позже.");
+                        tg.showAlert("Сбой сервера. Возможно, Vercel ушел в таймаут из-за Steam Guard.");
                     } finally {
-                        // Возвращаем кнопку в исходное состояние
                         btn.innerHTML = originalText;
                         btn.disabled = false;
                     }
