--- a/public/admin.html
+++ b/public/admin.html
@@ -31,6 +31,14 @@
                 <button class="tab-button" data-tab="admin">Администрирование</button>
             </div>
 
+          <div id="admin-recent-wrapper" style="display: none; margin-bottom: 20px;">
+    <h3 style="font-size: 14px; color: var(--text-color-muted); margin-bottom: 10px; border-bottom: 1px solid var(--divider-glass-color); padding-bottom: 5px;">
+        <i class="fa-solid fa-clock-rotate-left"></i> Недавно использованные
+    </h3>
+    <div id="admin-recent-grid" class="pending-actions-grid">
+        </div>
+</div>
+
             <div id="tab-content-main" class="tab-content active">
                 <div class="admin-icon-menu">
                     <div class="admin-icon-button" data-view="view-admin-pending-actions">
